manage resources better
